src/test/deca/context/valid/test2_empty.deca
// Description:
//    Programme ayant un main vide
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : OUI
//
// Resultats:
//    pas de resultat
//
// Historique:
//    cree le 06/01/2021

{
}